hphp/test/slow/object/param-type-hh-object.php.expectf
string(8) "stdClass"

Catchable fatal error: Argument 1 passed to test() must be an instance of HH\object, string given in %s on line 10
